# Mneme

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
data/: bulk_memory_seed_100.jsonl
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DECISIONS.md  DEMO.md  FINAL_VERIFICATION.md  INTERVIEW.md  LOCAL_SETUP_STATUS.md  PLAN.md  QUICKSTART.md  RESUME.md  STUDY-NOTES.md  mcp-config-example.json
docs/construction-log/: 2026-06-17-day-01-init.md  2026-06-17-day-02-fetch-references.md  2026-06-17-day-02b-code-scaffold.md  2026-06-17-day-03-sleep-agent.md  2026-06-17-day-04-polish.md  2026-07-01-day-05-integration-hardening.md  2026-07-02-day-06-e2e-hardening.md  2026-07-02-day-07-type-hardening.md  2026-07-02-day-08-demo-lifecycle.md  2026-07-02-day-09-demo-promote-readiness.md  2026-07-02-day-10-sleep-sequence-repair.md  (+25 more)
evals/: minimal_dataset.json
scripts/: claude-mneme.sh  drain_memory_jobs.py  inspect_memory.py  inspect_memory_jobs.py  relabel_memory_signals.py  run_demo_cycle.py  run_eval.py  run_sleep_once.py  seed_demo_memory.py  setup.sh
src/mneme/: config.py  (+8 more)
tests/: __init__.py  conftest.py  test_awake_agent.py  test_awake_tools.py  test_config.py  test_console.py  test_demo_seed.py  test_evaluation.py  test_llm_client.py  test_main_app.py  test_mcp_async_writes.py  test_memory_inspect.py  test_memory_prompt_policy.py  test_memory_store.py  test_memory_write_worker.py  test_relabel_memory_signals.py  test_sleep_cli.py  test_sleep_core_refresh.py  test_sleep_scheduler.py  test_sleep_staging.py  test_sleep_staging_unit.py  test_sleep_summary.py
(+29 files in other folders)
